<resources>
    <string name="app_name">FirebaseAuthentication</string>
    <string name="mail_address">Mail address</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="password_weak">Password too weak</string>
    <string name="invalid_mail">Invalid email</string>
    <string name="password_used">Password already used</string>
    <string name="others">Unknown error</string>
    <string name="email_used">Email already in use</string>
    <string name="no_such_account">No account with this email.</string>
    <string name="network_not_available">Network is not available</string>
    <string name="empty_email">Empty email</string>
    <string name="empty_password">Empty password</string>
    <string name="successful_login">You\'re  connected successfully</string>
    <string name="successful">You\'re connected successfully</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="click_on_login">You can click on login if you want to login</string>
    <string name="forgotten_password">Password forgotten?</string>
    <string name="receive_email">Receive password reset email</string>
    <string name="too_many_requests">Too many requests</string>
    <string name="reset_mail_sent">"Reset email sent to "</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="settings">Settings</string>
    <string name="delete_successfull">Your account has been deleted successffully</string>
    <string name="exit_confirmation_message">Are you sure you wanna delete your account?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="exit_confirmation">Acconte delete confirmation</string>
    <string name="change_password">Change password</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="add_a_name">Add a name</string>
    <string name="change_email">Change email</string>
    <string name="update">Update</string>
    <string name="new_mail_address">New mail address</string>
    <string name="recent_login_required">Recent login required required</string>
    <string name="unknown_account">Unknown account,  login and try again</string>
    <string name="old_mail_address">Old mail address</string>
    <string name="email_update_successfull">Email update successfull</string>
    <string name="new_password">New password</string>
    <string name="old_name">Old name</string>
    <string name="new_name">New name</string>
    <string name="password_update_successfull">Password update successfull</string>
    <string name="name_updated">Name update successfull</string>
    <string name="invalid_user">Invalid user</string>
    <string name="picture_updated">Profile picture updated</string>
</resources>